// Copyright 2013 Prometheus Team
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package io.prometheus.alert_manager;

// A regex-based label filter used in aggregations.
message Filter {
  // The regex matching the label name.
  required string name_re = 1;
  // The regex matching the label value.
  required string value_re = 2;
}

message AggregationRule {
  repeated Filter filter = 1;
  optional int32 repeat_rate = 2 [default = 7200];
}

message AlertManagerConfig {
  repeated AggregationRule aggregation_rule = 1;
}
